--- a/post_d1.html
+++ b/post_d1.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>To be honest, as a person who move to New York two years ago, I barely use Yelp. I know When people want to find some places to eat, it’s always an intuition to open Yelp and check, however, for being lazy in most of the time, I pass this job to my friends, who care and trust more about the reviews and rankings of the restaurants. It's not because I don't like Yelp, it's just that I don’t have a good "Yelp Luck”— I choose unwisely all the time. The thing is when I tried some of the most highest reviewed restaurants, the foods were just not that good as the reviewers recommended, I ended up feeling disappointed. …..Or on the second thought, maybe I just have a different taste from other reviewers that’s all.</p>
 
-                    <p>So I just registered my first Yelp account a week ago. <strike>Obviously, for the job application.</strike> I also made my first review of a seafood restaurant I went few days ago.</p>
+                    <p>So I just registered my first Yelp account a week ago. I also wrote my first review of a seafood restaurant I went few days ago.</p>
 
                     <p><strong>The experience through the registration wasn’t the best experience in my life as I remembered.</strong></p>
 
