--- a/post_d5.html
+++ b/post_d5.html
@@ -117,6 +117,9 @@
 
                     <p>Try the prototype on <a style="text-decoration: underline;" href="https://invis.io/67C6D62S4#/238962762_landing_Page" target="_blank">Invision</a>.</p>
                     <br>
+                    <hr>
+
+                    <p>After working on this design challenge, I feel more intersted in the community about Yelp now. I truly appreciate people’s contribution to the community because they do help and support each other by writing, reading, and rating the reviews, which makes the social engagement more positive and beautiful.</p>
 
                     <p>Photograph by <a href="https://unsplash.com/search/red?photo=mpBea02wKGM" target="_blank">Matese Fields</a>.</p>
                     <div>
