--- a/post_d5.html
+++ b/post_d5.html
@@ -119,7 +119,7 @@
                     <br>
                     <hr>
 
-                    <p>After working on this design challenge, I feel more intersted in the community about Yelp now. I truly appreciate people’s contribution to the community because they do help and support each other by writing, reading, and rating the reviews, which makes the social engagement more positive and beautiful.</p>
+                    <p>After working on this design challenge, I feel more intersted in the community of Yelp now. I truly appreciate people’s contribution to the community because they do help and support each other by writing, reading, and rating the reviews, which makes the social engagement more positive and beautiful, and it does help to promote the local business as well.</p>
 
                     <p>Photograph by <a href="https://unsplash.com/search/red?photo=mpBea02wKGM" target="_blank">Matese Fields</a>.</p>
                     <div>
